--- a/egg/zoo/emergent_captioner/finetuning/config.yml
+++ b/egg/zoo/emergent_captioner/finetuning/config.yml
@@ -1,19 +1,25 @@
-WANDB : False
-WANDB_NAME : "rll_refactor_cider_max_len_20_no_dropout_bsz_16"
-DEBUG : True
-INIT_VAL : False
+DEBUG : False
+INIT_VAL : True
 CIDER_OPTIM : True
 GREEDY_BASELINE : True
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 
 opts: 
   baseline : mean
-  n_epochs : 5
-  batch_size : 500
+  n_epochs : 20
+  batch_size : 200  
   lr : 1e-6
-  max_len : 20
+  max_len : 40
   checkpoint_freq : 4
   dataset_dir : /home/manugaur/coco
   clipcap_model_path : /home/manugaur/clipcap/coco_weights.pt
-  checkpoint_dir : /home/manugaur/EGG/checkpoints/temp
+  checkpoint_dir : /home/manugaur/EGG/checkpoints/cider_g_len_40
     
+WANDB :
+  logging : True
+  sweep : False
+  sweep_id: ""
+  sweep_run_count : 100
+  entity : "manugaur"
+  project : "emergent_captioner"
+  run_name : "rll_refactor_cider_g_t_3e-1_len_40"
