--- a/egg/zoo/emergent_captioner/finetuning/config.yml
+++ b/egg/zoo/emergent_captioner/finetuning/config.yml
@@ -1,22 +1,22 @@
-DEBUG : False
+DEBUG : True
 INIT_VAL : True
 CIDER_OPTIM : True
 GREEDY_BASELINE : True
-SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
+SAVE_BEST_METRIC : False # to save nothing : = False and checkpoint_freq = 0
 
 opts: 
   baseline : mean
-  n_epochs : 20
-  batch_size : 200  
+  n_epochs : 1
+  batch_size : 128  
   lr : 1e-6
-  max_len : 40
-  checkpoint_freq : 4
+  max_len : 20
+  checkpoint_freq : 0
   dataset_dir : /home/manugaur/coco
   clipcap_model_path : /home/manugaur/clipcap/coco_weights.pt
-  checkpoint_dir : /home/manugaur/EGG/checkpoints/cider_g_len_40
+  checkpoint_dir : /home/manugaur/EGG/checkpoints/temp
     
 WANDB :
-  logging : True
+  logging : False
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
