--- a/egg/zoo/emergent_captioner/finetuning/config.yml
+++ b/egg/zoo/emergent_captioner/finetuning/config.yml
@@ -1,16 +1,16 @@
 DEBUG : True
-INIT_VAL : True
+INIT_VAL : False
 CIDER_OPTIM : True
 GREEDY_BASELINE : True
 SAVE_BEST_METRIC : False # to save nothing : = False and checkpoint_freq = 0
 
 opts: 
   baseline : mean
-  n_epochs : 1
-  batch_size : 128  
+  n_epochs : 5
+  batch_size : 256  
   lr : 1e-6
   max_len : 20
-  checkpoint_freq : 0
+  checkpoint_freq : 1
   dataset_dir : /home/manugaur/coco
   clipcap_model_path : /home/manugaur/clipcap/coco_weights.pt
   checkpoint_dir : /home/manugaur/EGG/checkpoints/temp
@@ -22,4 +22,4 @@ WANDB :
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : "rll_refactor_cider_g_t_3e-1_len_40"
+  run_name : "dummy_dum_dum"
