--- a/egg/zoo/emergent_captioner/finetuning/config.yml
+++ b/egg/zoo/emergent_captioner/finetuning/config.yml
@@ -1,8 +1,8 @@
-DEBUG : True
+DEBUG : False
 INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : False # to save nothing : = False and checkpoint_freq = 0
-captions : "coco" #coco, mistral, blip_holistic
+captions : "mistral" #coco, mistral, blip_holistic
 train_method : "mle" # (discriminative, cider, mle)
 prefix_len : 10
 max_len_token : 40
@@ -10,12 +10,13 @@ max_len_token : 40
 opts: 
   baseline : mean
   n_epochs : 1
-  batch_size : 2 
+  batch_size : 512
   lr : 1e-6
   max_len : 20
-  checkpoint_freq : 1
+  checkpoint_freq : 0
+  num_workers : 16
   dataset_dir : /home/manugaur/coco
-  clipcap_model_path : /home/manugaur/official_clipcap/coco_weights.pt
+  # mle_model_path :  /home/manugaur/official_clipcap/coco_weights.pt
   checkpoint_dir : /home/manugaur/EGG/checkpoints/temp
     
 WANDB :
