--- a/egg/zoo/emergent_captioner/finetuning/config.yml
+++ b/egg/zoo/emergent_captioner/finetuning/config.yml
@@ -1,30 +1,30 @@
 DEBUG : False
 INIT_VAL : True
 GREEDY_BASELINE : False
-SAVE_BEST_METRIC : False # to save nothing : = False and checkpoint_freq = 0
-captions : "mistral" #coco, mistral, blip_holistic
+SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
+captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
 train_method : "mle" # (discriminative, cider, mle)
 prefix_len : 10
-max_len_token : 40
+warmup_ratio : 0.034
 
 opts: 
   baseline : mean
-  n_epochs : 1
-  batch_size : 512
-  lr : 1e-6
-  max_len : 20
+  n_epochs : 10
+  batch_size : 40
+  lr : 2e-5 #1e-6
+  max_len : 40
   checkpoint_freq : 0
   num_workers : 16
   dataset_dir : /home/manugaur/coco
-  # mle_model_path :  /home/manugaur/official_clipcap/coco_weights.pt
-  checkpoint_dir : /home/manugaur/EGG/checkpoints/temp
+  mle_model_path :  /home/manugaur/official_clipcap/coco_weights.pt
+  checkpoint_dir : /home/manugaur/EGG/checkpoints/coco/mle_len_40
     
 WANDB :
-  logging : False
+  logging : True
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : "dummy_dum_dum"
+  run_name : "coco_mle_len_40"
 
