saving val preds just for best metric, not every epoch

--- a/egg/zoo/emergent_captioner/finetuning/config.yml
+++ b/egg/zoo/emergent_captioner/finetuning/config.yml
@@ -2,7 +2,7 @@ DEBUG : False
 INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
-captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
+captions_type : "mistral_4" #coco, (mistral, mistral_4), blip_holistic
 train_method : "mle" # (discriminative, cider, mle)
 prefix_len : 10
 warmup_ratio : 0.034
@@ -10,14 +10,14 @@ warmup_ratio : 0.034
 opts: 
   baseline : mean
   n_epochs : 10
-  batch_size : 40
+  batch_size : 50
   lr : 2e-5 #1e-6
-  max_len : 40
+  max_len : 50
   checkpoint_freq : 0
   num_workers : 16
   dataset_dir : /home/manugaur/coco
   mle_model_path :  /home/manugaur/official_clipcap/coco_weights.pt
-  checkpoint_dir : /home/manugaur/EGG/checkpoints/coco/mle_len_40
+  checkpoint_dir : /home/manugaur/EGG/checkpoints/mistral_4/mle_len_40
     
 WANDB :
   logging : True
@@ -26,5 +26,5 @@ WANDB :
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : "coco_mle_len_40"
+  run_name : "mistral_4_mle_len_40"
 
