--- a/egg/zoo/emergent_captioner/finetuning/configs/mle.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/mle.yml
@@ -1,8 +1,8 @@
 DEBUG : False
-INIT_VAL : True
+INIT_VAL : False
 GREEDY_BASELINE : True
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
-captions_type : "mistral_4" #coco, (mistral, mistral_4), blip_holistic
+captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
 train_method : "mle" # (discriminative, cider, mle)
 prefix_len : 10
 warmup_ratio : 0.034
@@ -11,14 +11,14 @@ official_clipcap_weights : /home/manugaur/official_clipcap/coco_weights.pt
 opts: 
   baseline : mean
   n_epochs : 10
-  batch_size : 40
+  batch_size : 5
   lr :  2e-5
   max_len : 50
   checkpoint_freq : 0
   num_workers : 16
   dataset_dir : /home/manugaur/coco
-  mle_model_path : /home/manugaur/EGG/checkpoints/mistral_4/mle_len_50/best.pt
-  checkpoint_dir : /home/manugaur/EGG/checkpoints/mistral_4/mle_len50
+  mle_model_path : /home/manugaur/EGG/checkpoints/coco/mle_len_50/best.pt
+  checkpoint_dir : /home/manugaur/EGG/checkpoints/coco/mle_len50
     
 WANDB :
   logging : True
@@ -27,5 +27,5 @@ WANDB :
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : "mle_len_50_mistral_4"
+  run_name : "dummy" # "mle_len_50_mistral_4"
 
