--- a/egg/zoo/emergent_captioner/finetuning/configs/mle.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/mle.yml
@@ -1,4 +1,4 @@
-DEBUG : False
+DEBUG : True
 INIT_VAL : False
 GREEDY_BASELINE : True
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
@@ -10,18 +10,18 @@ official_clipcap_weights : /home/manugaur/official_clipcap/coco_weights.pt
 
 opts: 
   baseline : mean
-  n_epochs : 10
-  batch_size : 5
+  n_epochs : 1
+  batch_size : 10
   lr :  2e-5
   max_len : 50
-  checkpoint_freq : 0
+  checkpoint_freq : 1
   num_workers : 16
   dataset_dir : /home/manugaur/coco
   mle_model_path : /home/manugaur/EGG/checkpoints/coco/mle_len_50/best.pt
   checkpoint_dir : /home/manugaur/EGG/checkpoints/coco/mle_len50
     
 WANDB :
-  logging : True
+  logging : False
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
