Added support for distributed_gather. Currently just interactions need for validaiton which runs only on gpu:0 --> all_gather not needed

--- a/egg/zoo/emergent_captioner/finetuning/configs/cider_mistral.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/cider_mistral.yml
@@ -27,6 +27,6 @@ WANDB :
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : "dummy" #"cider_g_len_50_mistral_4"
+  run_name : "check_num_proc_ddp_4_gpu" #"cider_g_len_50_mistral_4"
 
 #debug, init_val, logging
