--- a/egg/zoo/emergent_captioner/finetuning/configs/mle_mistral.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/mle_mistral.yml
@@ -1,4 +1,4 @@
-DEBUG : False
+DEBUG : True
 INIT_VAL : True
 GREEDY_BASELINE : True
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
@@ -19,7 +19,7 @@ opts:
   num_workers : 16
   dataset_dir : /home/manugaur/coco
   mle_model_path : /home/manugaur/EGG/checkpoints/mistral_4/mle_len_50/best.pt
-  checkpoint_dir : /home/manugaur/EGG/checkpoints/temp #mistral_4/mle_len_50
+  checkpoint_dir : /home/manugaur/EGG/checkpoints/temp/mle_len_50
     
 WANDB :
   logging : False
