--- a/egg/zoo/emergent_captioner/finetuning/configs/cider.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/cider.yml
@@ -1,33 +1,36 @@
 DEBUG : False
 INIT_VAL : True
-GREEDY_BASELINE : False
+GREEDY_BASELINE : True
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
-captions_type : "blip2mistral" #coco, (mistral, mistral_4), blip_holistic
-train_method : "discriminative" # (discriminative, cider, mle)
+captions_type : "mistral_4" #coco, (mistral_4), blip2mistral
+train_method : "cider" # (discriminative, cider, mle)
 prefix_len : 10
 warmup_ratio : 0.034
 official_clipcap_weights : /home/manugaur/official_clipcap/coco_weights.pt
+num_workers : 16
+CAPS_PER_IMG_train: 4
+CAPS_PER_IMG_val: 4
 
 opts: 
   baseline : mean
   n_epochs : 10
-  batch_size : 100
-  lr :  1e-7 #2e-5
+  batch_size : 180
+  lr :  1e-6 #1e-7 for blip
   max_len : 50
   checkpoint_freq : 0
   num_workers : 16
   dataset_dir : /home/manugaur/coco
-  mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle_len_50/best.pt # mistral_4 , coco
-  checkpoint_dir : /home/manugaur/EGG/checkpoints/blip2mistral/sr
+  mle_model_path : /home/manugaur/EGG/checkpoints/mistral_4/mle_len_50/best.pt  #blip2mistral/mle_len_50/best.pt #coco
+  checkpoint_dir : /home/manugaur/EGG/checkpoints/mistral_4/cider_g_len_50_lr_1e-7 #blip2mistral/cider_g_len_50  #cider_g_coco
     
 WANDB :
   logging : False
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
-  entity : "manugaur"
-  project : "emergent_captioner"
-  run_name : "sr_len_50_lr_1e-7_bs_100_blip2mistral"
+  entity : manugaur
+  project : emergent_captioner
+  run_name : cider_g_mistral4_len_50_lr_1e-7 #"cider_g_len_50_mistral_4"
 
 inference : 
   flag : False
