--- a/egg/zoo/emergent_captioner/finetuning/configs/sr.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr.yml
@@ -1,27 +1,30 @@
-DEBUG : False
+DEBUG : True
 INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
-captions_type : "blip2mistral" #coco, (mistral, mistral_4), blip_holistic
+captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
 train_method : "discriminative" # (discriminative, cider, mle)
 prefix_len : 10
 warmup_ratio : 0.034
 official_clipcap_weights : /home/manugaur/official_clipcap/coco_weights.pt
+num_workers : 16
+CAPS_PER_IMG_train: 4
+CAPS_PER_IMG_val: 4
 
 opts: 
   baseline : mean
-  n_epochs : 10
+  n_epochs : 1
   batch_size : 100
   lr :  1e-7 #2e-5
   max_len : 50
   checkpoint_freq : 0
   num_workers : 16
   dataset_dir : /home/manugaur/coco
-  mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle_len_50/best.pt # mistral_4 , coco
+  mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt # mistral_4 , coco
   checkpoint_dir : /home/manugaur/EGG/checkpoints/blip2mistral/sr
     
 WANDB :
-  logging : False
+  logging : True
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
@@ -32,7 +35,5 @@ WANDB :
 inference : 
   batch_size : 180
   output_dir : /home/manugaur/EGG/inference_preds/
-  #captions_type, debug, init_val
 
-
-#debug, init_val, logging, bsz, lr, wandb_name
+#debug, init_val, logging, bsz, lr
