--- a/egg/zoo/emergent_captioner/finetuning/configs/cider.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/cider.yml
@@ -1,4 +1,4 @@
-DEBUG : True
+DEBUG : False
 INIT_VAL : True
 GREEDY_BASELINE : True
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
@@ -13,7 +13,7 @@ CAPS_PER_IMG_val: 4
 
 opts: 
   baseline : mean
-  n_epochs : 1
+  n_epochs : 10
   batch_size : 180
   lr :  1e-6 #1e-7 for blip
   max_len : 50
@@ -24,13 +24,13 @@ opts:
   checkpoint_dir : /home/manugaur/EGG/checkpoints/mistral_4/cider_g_len_50_lr_1e-7 #blip2mistral/cider_g_len_50  #cider_g_coco
     
 WANDB :
-  logging : False
+  logging : True
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
   entity : manugaur
   project : emergent_captioner
-  run_name : cider_g_mistral4_len_50_lr_1e-7 #"cider_g_len_50_mistral_4"
+  run_name :  #suffix to "cider_{data}_"
 
 inference : 
   batch_size : 180
