--- a/egg/zoo/emergent_captioner/finetuning/configs/mle.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/mle.yml
@@ -1,4 +1,4 @@
-DEBUG : False
+DEBUG : True
 INIT_VAL : True
 GREEDY_BASELINE : True
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
@@ -8,31 +8,31 @@ prefix_len : 10
 warmup_ratio : 0.034
 official_clipcap_weights : /home/manugaur/official_clipcap/coco_weights.pt
 num_workers : 16
-CAPS_PER_IMG_train: 4
-CAPS_PER_IMG_val: 4
+CAPS_PER_IMG_train: 5
+CAPS_PER_IMG_val: 5
 
 opts: 
   baseline : mean
   n_epochs : 10
   batch_size : 40 #10 for ada
   lr :  2e-5
-  max_len : 50
+  max_len : 40
   checkpoint_freq : 1
   num_workers : 16
   dataset_dir : /home/manugaur/coco
   checkpoint_dir : /home/manugaur/EGG/checkpoints/mistral_4/mle
     
 WANDB :
-  logging : True
+  logging : False
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : "mle" # "mle_len_50_mistral_4"
+  run_name : "5_caps_len_40 (unpatched model)" #suffix to "sr_{data}_"
  
 inference : 
-  batch_size : 180
+  batch_size : 40
   output_dir : /home/manugaur/EGG/inference_preds/
 
-#debug,init_val, logging, bsz
+#DEBUG,INIT_VAL, logging, batch_size
