--- a/egg/zoo/emergent_captioner/finetuning/configs/sr.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr.yml
@@ -8,15 +8,15 @@ prefix_len : 10
 warmup_ratio : 0.034
 official_clipcap_weights : /home/manugaur/official_clipcap/coco_weights.pt
 num_workers : 16
-CAPS_PER_IMG_train: 5
-CAPS_PER_IMG_val: 5
+CAPS_PER_IMG_train: 4
+CAPS_PER_IMG_val: 4
 
 opts: 
   baseline : mean
-  n_epochs : 10
+  n_epochs : 20
   batch_size : 100
-  lr : 1e-7 #2e-5
-  max_len : 40
+  lr : 3e-8 #2e-5
+  max_len : 50
   checkpoint_freq : 0
   num_workers : 16
   dataset_dir : /home/manugaur/coco
@@ -30,7 +30,7 @@ WANDB :
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : lr_1e-7_prev_mle_wts #suffix to "sr_{data}_"
+  run_name : 4_caps_len40_bsz_100_lr_3e-8 #suffix to "sr_{data}_"
 
 inference : 
   batch_size : 100
