--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Byte-compiled / optimized / DLL file
 egg/zoo/emergent_captioner/finetuning/configs/
 hard_negs/
+inference_log/
 sender_inputs/
 bags_of_hard_negs.py
 job.sh
