--- a/egg/zoo/emergent_captioner/finetuning/configs/edit_5.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/edit_5.yml
@@ -1,7 +1,7 @@
 DEBUG : False  # if true : model saving, logging turned off.  
-INIT_VAL : False
+INIT_VAL : True
 GREEDY_BASELINE : False
-SAVE_BEST_METRIC : False # to save nothing : = False and checkpoint_freq = 0
+SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : False
 ONLY_VAL : False
 
@@ -29,7 +29,9 @@ mllm : "llava-phi" # {llava, clipcap}
 temp : 0.3
 max_new_tokens : 50
 lora_rank : 8
-iters_per_eval : 180 # eval every 30 mins
+iters_per_eval : 360 # eval every 30 mins
+n_layers : 9
+lm_head : False
 log_spice : False
 
 finetune_model : llm # {gpt, clip} # automatically freeze gpt.transformer or CLIP
@@ -37,15 +39,15 @@ freeze_wte : False
 freeze_adapter : False
 
 neg_mining:
-  curricullum : {"medium" : 2} # "easy" : 3, "medium": 7, "hard" : 20} #indexed from 1 {"medium" : 3, "hard" : 10}
-  bag_size : 5 
+  curricullum : {"medium" : 4} # "easy" : 3, "medium": 7, "hard" : 20} #indexed from 1 {"medium" : 3, "hard" : 10}
+  bag_size : 4 
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
   val_level : "hard"
 
 opts: 
   baseline : mean
-  n_epochs : 2
+  n_epochs : 4
   batch_size : 32
   lr : 5e-8 #2e-5
   max_len : 50
@@ -62,7 +64,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  llava_lora_5_layers_r8_temp0.3_medium_bsz5 #suffix to "sr_{data}_"
+  run_name :  llava_lora_9_layers_r8_temp0.3_medium_bsz4 #suffix to "sr_{data}_"
   log_mmvp_all : True
 
 inference : 
