--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_llava_0.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_llava_0.yml
@@ -1,7 +1,7 @@
 DEBUG : False  # if true : model saving, logging turned off.  
-INIT_VAL : False
+INIT_VAL : True
 GREEDY_BASELINE : False
-SAVE_BEST_METRIC : False # to save nothing : = False and checkpoint_freq = 0
+SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : False
 ONLY_VAL : False
 
@@ -31,13 +31,16 @@ max_new_tokens : 50
 lora_rank : 8
 iters_per_eval : 180 # eval every 30 mins
 log_spice : False
+n_layers : 9
+lm_head : False
+log_spice : False
 
 finetune_model : llm # {gpt, clip} # automatically freeze gpt.transformer or CLIP
 freeze_wte : False
 freeze_adapter : False
 
 neg_mining:
-  curricullum : {"medium" : 4} # "easy" : 3, "medium": 7, "hard" : 20} #indexed from 1 {"medium" : 3, "hard" : 10}
+  curricullum : {"medium" : 2, "hard" : 4} # "easy" : 3, "medium": 7, "hard" : 20} #indexed from 1 {"medium" : 3, "hard" : 10}
   bag_size : 5 
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
@@ -46,7 +49,7 @@ neg_mining:
 opts: 
   baseline : mean
   n_epochs : 4
-  batch_size : 35
+  batch_size : 25
   lr : 5e-8 #2e-5
   max_len : 50
   checkpoint_freq : 0
@@ -56,13 +59,13 @@ opts:
   checkpoint_dir : /home/manugaur/EGG/checkpoints/blip2mistral/sr
   recv_clip_model : ViT-L/14@336px #ViT-B/32
 WANDB:
-  logging : False
+  logging : True
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  llava_lora_5_layers_r8_temp0.3_medium_bsz5 #suffix to "sr_{data}_"
+  run_name :  llava_lora_9layers_t0.3_M2H4_bsz5 #suffix to "sr_{data}_"
   log_mmvp_all : True
 
 inference : 
