--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_llava_1.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_llava_1.yml
@@ -1,5 +1,5 @@
-DEBUG : True  # if true : model saving, logging turned off.  
-INIT_VAL : False
+DEBUG : False  # if true : model saving, logging turned off.  
+INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : False
@@ -26,11 +26,12 @@ mllm : "llava-phi" # {llava, clipcap}
 # clip_text : True
 
 #hparams:
-temp : 0.4
+temp : 0.3
 max_new_tokens : 50
 lora_rank : 8
 iters_per_eval : 180 # eval every 30 mins
-n_layers : 5
+log_spice : False
+n_layers : 9
 lm_head : False
 log_spice : False
 
@@ -48,8 +49,8 @@ neg_mining:
 opts: 
   baseline : mean
   n_epochs : 4
-  batch_size : 35
-  lr : 5e-8 #2e-5
+  batch_size : 25
+  lr : 1e-8 #2e-5
   max_len : 50
   checkpoint_freq : 0
   num_workers : 8
@@ -64,7 +65,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  llava_lora_5_layers_r8_temp0.4_medium_bsz5 #suffix to "sr_{data}_"
+  run_name :  llava_lora_9layers_t0.3_M4_bsz5_lr1e8 #suffix to "sr_{data}_"
   log_mmvp_all : True
 
 inference : 
