--- a/egg/zoo/emergent_captioner/finetuning/configs/mle.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/mle.yml
@@ -1,47 +1,58 @@
 DEBUG : False
 INIT_VAL : True
-GREEDY_BASELINE : True
-SAVE_BEST_METRIC : False # to save nothing : = False and checkpoint_freq = 0
+GREEDY_BASELINE : False
+SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : False
 ONLY_VAL : False
 
-captions_type : "mistral_4" #coco, (mistral, mistral_4), blip_holistic
+captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
 train_method : "mle" # (discriminative, cider, mle)
 prefix_len : 10
 warmup_ratio : 0.034
 official_clipcap_weights : /home/manugaur/official_clipcap/coco_weights.pt
 num_workers : 16
-CAPS_PER_IMG_train: 1  # tokenisation
-CAPS_PER_IMG_val: 4  # NLG eval
+CAPS_PER_IMG_train: 5  # tokenisation
+CAPS_PER_IMG_val: 5  # NLG eval
+diff_lr: False
 fp16: False
-
+mllm : "clipcap" # {llava, clipcap}
+reinforce : False
+contrastive : False
+#hparams
 lora : False
 lora_rank : 32
+log_spice : True
+
+finetune_model : llm
+freeze_wte : False
 
 neg_mining:
-  do : False
-  bag_size : 10
-  val : False
+  curricullum : {"rand" : 10} # "easy" : 3, "medium": 7, "hard" : 20} #indexed from 1 {"medium" : 3, "hard" : 10}
+  bag_size : 5
+  save_using_neg : False #save model i.e best on neg_dataloader 
+  val_bag_size : 5
+  val_level : "hard"
 
 opts: 
   baseline : mean
   n_epochs : 10
-  batch_size : 40 #10 for ada
+  batch_size : 32 #10 for ada
   lr :  2e-5
   max_len : 50
   checkpoint_freq : 0
   num_workers : 16
   dataset_dir : /home/manugaur/coco
   checkpoint_dir : /home/manugaur/EGG/checkpoints/mistral_4/mle_1cap
-    
+  recv_clip_model : ViT-L/14@336px #ViT-B/32
+
 WANDB :
-  logging : False
+  logging : True
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : "1_train_cap" #suffix to "sr_{data}_"
+  run_name : "final" #suffix to "sr_{data}_"
  
 inference : 
   batch_size : 40
