--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_get_preds.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_get_preds.yml
@@ -1,8 +1,8 @@
 DEBUG : False  # if true : model saving, logging turned off.  
-INIT_VAL : True
+INIT_VAL : False
 GREEDY_BASELINE : False
-SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
-ONLY_INFERENCE : False
+SAVE_BEST_METRIC : False # to save nothing : = False and checkpoint_freq = 0
+ONLY_INFERENCE : True
 ONLY_VAL : False
 
 captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
@@ -10,51 +10,65 @@ train_method : "discriminative" # (discriminative, cider, mle)
 prefix_len : 10
 warmup_ratio : 0.034
 official_clipcap_weights : /home/manugaur/official_clipcap/coco_weights.pt
-num_workers : 16
-CAPS_PER_IMG_train: 1 # irrelevant
-CAPS_PER_IMG_val: 4  # NLG eval
+num_workers : 8
+CAPS_PER_IMG_train: 1 # maybe use in CL
+CAPS_PER_IMG_val: 4 # NLG eval
 fp16: False
+diff_lr: False
+contrastive : False
+reinforce : True
+mllm : "clipcap" # {llava, clipcap, llava-phi}
 
 #lora
-lora : True
-lora_rank : 32 #64 for clip
-clip_mlp_ft : False
+# lora : False
+# clip_mlp_ft: True
+# clip_text : True
 
-finetune_model : clip # {gpt, clip} # automatically freeze gpt.transformer or CLIP
-freeze_wte : True
+#hparams:
+temp : 0.3
+max_new_tokens : 50
+lora_rank : 8
+iters_per_eval : 180 # eval every 30 mins
+log_spice : False
+n_layers : 9
+lm_head : False
+log_spice : False
+
+finetune_model : llm # {gpt, clip} # automatically freeze gpt.transformer or CLIP
+freeze_wte : False
 freeze_adapter : False
 
 neg_mining:
-  curricullum : {"rand" : 10} #,  "medium" : 5, "hard" : 10} # indexed from 1
-  bag_size : 5
+  curricullum : {"medium" : 2, "hard" : 4} # "easy" : 3, "medium": 7, "hard" : 20} #indexed from 1 {"medium" : 3, "hard" : 10}
+  bag_size : 5 
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
-  val_level : "medium"
+  val_level : "hard"
 
 opts: 
   baseline : mean
-  n_epochs : 10
-  batch_size : 128
-  lr : 1e-7 #2e-5
+  n_epochs : 4
+  batch_size : 100
+  lr : 5e-8 #2e-5
   max_len : 50
   checkpoint_freq : 0
-  num_workers : 16
+  num_workers : 8
   dataset_dir : /home/manugaur/coco
   # mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
   checkpoint_dir : /home/manugaur/EGG/checkpoints/blip2mistral/sr
-    
+  recv_clip_model : ViT-L/14@336px #ViT-B/32
 WANDB:
-  logging : True
+  logging : False
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  clip_ft_adapter_randinit #suffix to "sr_{data}_"
+  run_name :  llava_lora_9layers_t0.3_M2H4_bsz5 #suffix to "sr_{data}_"
   log_mmvp_all : True
 
 inference : 
-  batch_size : 200
+  batch_size : 128
   output_dir : /home/manugaur/EGG/inference_preds/
 
 #DEBUG, ONLY_INFERENCE,  INIT_VAL, logging, save_using_neg
