--- a/egg/zoo/emergent_captioner/finetuning/configs/sr.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr.yml
@@ -1,7 +1,7 @@
-DEBUG : False  # if true : model saving, logging turned off.  
-INIT_VAL : True
+DEBUG : True  # if true : model saving, logging turned off.  
+INIT_VAL : False
 GREEDY_BASELINE : False
-SAVE_BEST_METRIC : False # to save nothing : = False and checkpoint_freq = 0
+SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : False
 ONLY_VAL : False
 
@@ -11,39 +11,43 @@ prefix_len : 10
 warmup_ratio : 0.034
 official_clipcap_weights : /home/manugaur/official_clipcap/coco_weights.pt
 num_workers : 16
-CAPS_PER_IMG_train: 1 # maybe use in CL
-CAPS_PER_IMG_val: 4 # NLG eval
+CAPS_PER_IMG_train: 5 # maybe use in CL
+CAPS_PER_IMG_val: 5 # NLG eval
 fp16: False
 diff_lr: True
 contrastive : False
+reinforce : True
 #lora
 lora : True
 lora_rank : 32 #64 for clip
-clip_mlp_ft : True
+clip_mlp_ft : False
+log_spice : True
 
-finetune_model : clip # {gpt, clip} # automatically freeze gpt.transformer or CLIP
-freeze_wte : True
+finetune_model : llm # {gpt, clip} # automatically freeze gpt.transformer or CLIP
+freeze_wte : False
 freeze_adapter : False
+mllm : "clipcap"
 
 neg_mining:
-  curricullum : {"rand" : 2, "medium" : 5,  "hard" : 10} #,  "medium" : 5, "hard" : 10} # indexed from 1
+  curricullum : {"rand" : 10} #,  "medium" : 5, "hard" : 10} # indexed from 1
   bag_size : 5
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
-  val_level : "medium"
+  val_level : "rand"
 
 opts: 
   baseline : mean
-  n_epochs : 10
-  batch_size : 128
-  lr : 5e-8 #2e-5
+  n_epochs : 1
+  batch_size : 100
+  lr : 9e-8 #2e-5
   max_len : 50
   checkpoint_freq : 0
   num_workers : 16
   dataset_dir : /home/manugaur/coco
   mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
   checkpoint_dir : /home/manugaur/EGG/checkpoints/blip2mistral/sr
-    
+  recv_clip_model : ViT-B/32 #ViT-L/14@336px
+
 WANDB:
   logging : False
   sweep : False
@@ -51,7 +55,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  5e-9_adapter_lr #suffix to "sr_{data}_"
+  run_name :  final #suffix to "sr_{data}_"
   log_mmvp_all : True
 
 inference : 
