--- a/egg/zoo/emergent_captioner/finetuning/configs/mle.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/mle.yml
@@ -1,5 +1,5 @@
-DEBUG : True
-INIT_VAL : False
+DEBUG : False
+INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : False
@@ -31,11 +31,11 @@ neg_mining:
   bag_size : 5
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
-  val_level : "hard"
+  val_level : "rand"
 
 opts: 
   baseline : mean
-  n_epochs : 1
+  n_epochs : 10
   batch_size : 32 #10 for ada
   lr :  2e-5
   max_len : 50
@@ -43,10 +43,10 @@ opts:
   num_workers : 16
   dataset_dir : /home/manugaur/coco
   checkpoint_dir : /home/manugaur/EGG/checkpoints/mistral_4/mle_1cap
-  recv_clip_model : ViT-L/14@336px #ViT-B/32
+  recv_clip_model : ViT-B/32 # ViT-L/14@336px
 
 WANDB :
-  logging : False
+  logging : True
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
