--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_edit_4.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_edit_4.yml
@@ -31,7 +31,7 @@ max_new_tokens : 50
 lora_rank : 8
 iters_per_eval : 360 # eval every 30 mins
 log_spice : False
-n_layers : 9
+n_layers : 5
 lm_head : False
 
 finetune_model : llm # {gpt, clip} # automatically freeze gpt.transformer or CLIP
@@ -40,15 +40,15 @@ freeze_adapter : False
 
 neg_mining:
   curricullum : {"medium" : 10} # "easy" : 3, "medium": 7, "hard" : 20} #indexed from 1 {"medium" : 3, "hard" : 10}
-  bag_size : 5 
+  bag_size : 2
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
-  val_level : "hard"
+  val_level : "medium"
 
 opts: 
   baseline : mean
   n_epochs : 10
-  batch_size : 25
+  batch_size : 26
   lr : 1e-8 #2e-5
   max_len : 50
   checkpoint_freq : 0
@@ -64,7 +64,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  llava_9layers_t0.4_M10_bsz5_lr1e8 #suffix to "sr_{data}_"
+  run_name :  llava_5layers_t0.4_M10_bsz2_lr1e8_valMedium #suffix to "sr_{data}_"
   log_mmvp_all : True
 
 inference : 
