--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_hard.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_hard.yml
@@ -22,7 +22,7 @@ mllm : "clipcap"
 lora : True
 lora_rank : 32 #64 for clip
 clip_mlp_ft : False
-log_spice : False
+log_spice : True
 
 finetune_model : llm # {gpt, clip} # automatically freeze gpt.transformer or CLIP
 freeze_wte : False
