--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_clip.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_clip.yml
@@ -1,7 +1,7 @@
 DEBUG : False  # if true : model saving, logging turned off.  
 INIT_VAL : True
 GREEDY_BASELINE : False
-SAVE_BEST_METRIC : False # to save nothing : = False and checkpoint_freq = 0
+SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : False
 ONLY_VAL : False
 
@@ -20,16 +20,17 @@ reinforce : True
 mllm : "clipcap"
 #lora
 lora : True
-lora_rank : 32 #64 for clip
-clip_mlp_ft : False
+lora_rank : 32
+clip_mlp_ft : True
 log_spice : False
 
-finetune_model : llm # {gpt, clip} # automatically freeze gpt.transformer or CLIP
-freeze_wte : False
+finetune_model : clip # {gpt, clip} # automatically freeze gpt.transformer or CLIP
+clip_text : False
+freeze_wte : True
 freeze_adapter : False
 
 neg_mining:
-  curricullum : {"rand" : 10} #,  "medium" : 5, "hard" : 10} # indexed from 1
+  curricullum : {"rand" : 1, "medium" : 2, "hard" : 3} #,  "medium" : 5, "hard" : 10} # indexed from 1
   bag_size : 5
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
@@ -38,7 +39,7 @@ neg_mining:
 opts: 
   baseline : mean
   n_epochs : 20
-  batch_size : 100
+  batch_size : 350
   lr : 5e-8 #2e-5
   max_len : 50
   checkpoint_freq : 1
@@ -55,7 +56,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  final_lr_5e8 #suffix to "sr_{data}_"
+  run_name :  clip_ft_2R7M20H_lr5e8_bsz5_wte_frozen #suffix to "sr_{data}_"
   log_mmvp_all : False
 
 inference : 
