--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_1.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_1.yml
@@ -1,8 +1,8 @@
 DEBUG : False  # if true : model saving, logging turned off.  
 INIT_VAL : True
 GREEDY_BASELINE : False
-SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
-ONLY_INFERENCE : True
+SAVE_BEST_METRIC : False # to save nothing : = False and checkpoint_freq = 0
+ONLY_INFERENCE : False
 ONLY_VAL : False
 
 captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
@@ -21,11 +21,11 @@ mllm : "clipcap"
 #lora
 lora : True
 lora_rank : 32 #64 for clip
-clip_mlp_ft : False
+clip_mlp_ft : True
 log_spice : False
 
 finetune_model : llm # {gpt, clip} # automatically freeze gpt.transformer or CLIP
-freeze_wte : False
+freeze_wte : True
 freeze_adapter : False
 
 neg_mining:
@@ -37,9 +37,9 @@ neg_mining:
 
 opts: 
   baseline : mean
-  n_epochs : 1
+  n_epochs : 20
   batch_size : 100
-  lr : 5e-8 #2e-5
+  lr : 9e-8 #2e-5
   max_len : 50
   checkpoint_freq : 1
   num_workers : 16
@@ -49,13 +49,13 @@ opts:
   recv_clip_model : ViT-B/32 #ViT-L/14@336px
 
 WANDB:
-  logging : False
+  logging : True
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  dummy # _lr_7e8 #suffix to "sr_{data}_"
+  run_name :  lr9e8_lora_r32_mlp_ft # _lr_7e8 #suffix to "sr_{data}_"
   log_mmvp_all : False
 
 inference : 
