--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_2.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_2.yml
@@ -11,51 +11,52 @@ prefix_len : 10
 warmup_ratio : 0.034
 official_clipcap_weights : /home/manugaur/official_clipcap/coco_weights.pt
 num_workers : 16
-CAPS_PER_IMG_train: 1 # maybe use in CL
-CAPS_PER_IMG_val: 4 # NLG eval
+CAPS_PER_IMG_train: 5 # maybe use in CL
+CAPS_PER_IMG_val: 5 # NLG eval
 fp16: False
 diff_lr: False
-contrastive : True
+contrastive : False
 reinforce : True
-
+mllm : "clipcap"
 #lora
 lora : True
-lora_rank : 64 #64 for clip
-clip_mlp_ft : True
-clip_text : True
+lora_rank : 32 #64 for clip
+clip_mlp_ft : False
+log_spice : False
 
-finetune_model : clip # {gpt, clip} # automatically freeze gpt.transformer or CLIP
+finetune_model : llm # {gpt, clip} # automatically freeze gpt.transformer or CLIP
 freeze_wte : True
 freeze_adapter : False
 
 neg_mining:
-  curricullum : {"rand" : 2, "easy" : 3, "medium": 7, "hard" : 20} #indexed from 1 {"medium" : 3, "hard" : 10}
-  bag_size : 5 
+  curricullum : {"rand" : 20} #,  "medium" : 5, "hard" : 10} # indexed from 1
+  bag_size : 5
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
-  val_level : "medium"
+  val_level : "rand"
 
 opts: 
   baseline : mean
   n_epochs : 20
   batch_size : 100
-  lr : 5e-8 #2e-5
+  lr : 9e-8 #2e-5
   max_len : 50
-  checkpoint_freq : 0
+  checkpoint_freq : 1
   num_workers : 16
   dataset_dir : /home/manugaur/coco
   mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
   checkpoint_dir : /home/manugaur/EGG/checkpoints/blip2mistral/sr
-    
+  recv_clip_model : ViT-B/32 #ViT-L/14@336px
+
 WANDB:
   logging : True
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
-  entity : "darshan-singh"
+  entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  bsz5_2r3e7m20h_adapter_ft #suffix to "sr_{data}_"
-  log_mmvp_all : True
+  run_name :  lr9e8_lora_r32 # _lr_7e8 #suffix to "sr_{data}_"
+  log_mmvp_all : False
 
 inference : 
   batch_size : 128
