--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_4.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_4.yml
@@ -1,7 +1,7 @@
 DEBUG : False  # if true : model saving, logging turned off.  
 INIT_VAL : True
 GREEDY_BASELINE : False
-SAVE_BEST_METRIC : False # to save nothing : = False and checkpoint_freq = 0
+SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : False
 ONLY_VAL : False
 
@@ -23,8 +23,9 @@ lora : True
 lora_rank : 64 #64 for clip
 clip_mlp_ft : False
 log_spice : False
+clip_text : False
 
-finetune_model : llm # {gpt, clip} # automatically freeze gpt.transformer or CLIP
+finetune_model : clip # {gpt, clip} # automatically freeze gpt.transformer or CLIP
 freeze_wte : True
 freeze_adapter : False
 
@@ -41,7 +42,7 @@ opts:
   batch_size : 100
   lr : 9e-8 #2e-5
   max_len : 50
-  checkpoint_freq : 1
+  checkpoint_freq : 0
   num_workers : 16
   dataset_dir : /home/manugaur/coco
   mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
@@ -55,7 +56,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  lr9e8_lora_r32_mlp_ft # _lr_7e8 #suffix to "sr_{data}_"
+  run_name :  lr9e8_lora_r64 # _lr_7e8 #suffix to "sr_{data}_"
   log_mmvp_all : False
 
 inference : 
