--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_1.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_1.yml
@@ -1,4 +1,4 @@
-DEBUG : True  # if true : model saving, logging turned off.  
+DEBUG : False  # if true : model saving, logging turned off.  
 INIT_VAL : False
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
@@ -27,7 +27,7 @@ lora_rank : 32
 clip_mlp_ft : True
 adapter_lora : True
 adapter_rank : 32
-clip_text : False 
+clip_text : False
 
 # freezing layers
 freeze_wte : True
@@ -43,7 +43,7 @@ neg_mining:
 
 opts: 
   baseline : mean
-  n_epochs : 1
+  n_epochs : 20
   batch_size : 100
   lr : 9e-8 #2e-5
   max_len : 50
@@ -61,7 +61,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  debug #lr9e8_lora_r32_mlp_ft 
+  run_name :  adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
