--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_3.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_3.yml
@@ -1,4 +1,4 @@
-DEBUG : False  # if true : model saving, logging turned off.  
+DEBUG : False # if true : model saving, logging turned off.  
 INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
@@ -18,16 +18,21 @@ diff_lr: False
 contrastive : False
 reinforce : True
 mllm : "clipcap"
+
+
 #lora
 lora : True
-lora_rank : 64 #64 for clip
+finetune_model : both # {gpt, clip} # automatically freeze gpt.transformer or CLIP
+lora_rank : 32
 clip_mlp_ft : True
-log_spice : False
+adapter_lora : False
+adapter_rank : 32
 clip_text : False
 
-finetune_model : clip # {gpt, clip} # automatically freeze gpt.transformer or CLIP
+# freezing layers
 freeze_wte : True
 freeze_adapter : False
+log_spice : False
 
 neg_mining:
   curricullum : {"rand" : 20} #,  "medium" : 5, "hard" : 10} # indexed from 1
@@ -42,7 +47,7 @@ opts:
   batch_size : 100
   lr : 9e-8 #2e-5
   max_len : 50
-  checkpoint_freq : 0
+  checkpoint_freq : 1
   num_workers : 16
   dataset_dir : /home/manugaur/coco
   mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
@@ -56,12 +61,12 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  lr9e8_lora_64_mlp_ft # _lr_7e8 #suffix to "sr_{data}_"
+  run_name :  both_ft_lr9e8_mlpr32_wte_frozen_adpter_ft #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
   batch_size : 128
   output_dir : /home/manugaur/EGG/inference_preds/
 
-#DEBUG, ONLY_INFERENCE,  INIT_VAL, logging, save_using_neg
+#DEBUG, INIT_VAL | ONLY_INFERENCE,  , logging, save_using_neg
 #CKPT_DIR = f"{data}/{sr}_{config[WANDB][run_name]}
