--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_5.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_5.yml
@@ -30,8 +30,8 @@ adapter_rank : 32
 clip_text : False
 
 # freezing layers
-freeze_wte : False
-freeze_adapter : False
+freeze_wte : True
+freeze_adapter : True
 log_spice : False
 
 neg_mining:
@@ -61,7 +61,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  both_ft_lr5e8_mlpr32_wte_ft_adpter_ft #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name :  both_ft_lr5e8_mlpr32_wte_frozen_adpter_frozen #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
