--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_6.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_6.yml
@@ -25,12 +25,12 @@ lora : True
 finetune_model : both # {gpt, clip} # automatically freeze gpt.transformer or CLIP
 lora_rank : 32
 clip_mlp_ft : True
-adapter_lora : False
+adapter_lora : True
 adapter_rank : 32
 clip_text : False
 
 # freezing layers
-freeze_wte : False
+freeze_wte : True
 freeze_adapter : False
 log_spice : False
 
@@ -61,7 +61,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  both_ft_lr5e8_mlpr32_wte_ft_adpter_ft #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name :  both_ft_lr5e8_mlpr32_wte_frozen_adpter_lora #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
