Getting inference preds for test_val set for ONLY_INFERENCE

--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_llm.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_llm.yml
@@ -1,8 +1,8 @@
-DEBUG : True # if true : model saving, logging turned off.  
+DEBUG : False  # if true : model saving, logging turned off.  
 INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
-ONLY_INFERENCE : True
+ONLY_INFERENCE : False
 ONLY_VAL : False
 
 captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
@@ -22,9 +22,9 @@ mllm : "clipcap"
 
 #lora
 lora : True
-finetune_model : llm # {llm, clip} # automatically freeze gpt.transformer or CLIP
+finetune_model : llm # {gpt, clip} # automatically freeze gpt.transformer or CLIP
 lora_rank : 32
-clip_mlp_ft : False 
+clip_mlp_ft : False
 adapter_lora : False
 adapter_rank : 32
 clip_text : False
@@ -35,19 +35,23 @@ freeze_adapter : False
 log_spice : False
 
 neg_mining:
-  curricullum : {"rand" : 100} #,  "medium" : 5, "hard" : 10} # indexed from 1
-  bag_size : 5
+  curricullum :  {100 : ["rand",5]}
+  save_optimizer : False
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
   val_level : "rand"
 
+resume_training : 
+  do : False
+  dir : sr_easy_bsz5
+  load_epoch  : 2 
+
 opts: 
   baseline : mean
-  n_epochs : 100
   batch_size : 100
   lr : 9e-8 #2e-5
   max_len : 50
-  checkpoint_freq : 1
+  checkpoint_freq : 2
   num_workers : 16
   dataset_dir : /home/manugaur/coco
   mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
@@ -61,12 +65,14 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  lr9e8_lora_r32 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name : llm_wte_frozen_9e8 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
   batch_size : 128
   output_dir : /home/manugaur/EGG/inference_preds/
 
-#DEBUG, ONLY_INFERENCE,  INIT_VAL, logging, save_using_neg
+#DEBUG, INIT_VAL | ONLY_INFERENCE,  , logging, save_using_neg
 #CKPT_DIR = f"{data}/{sr}_{config[WANDB][run_name]}
+
+
