--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_1.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_1.yml
@@ -1,8 +1,8 @@
-DEBUG : False # if true : model saving, logging turned off.  
+DEBUG : True # if true : model saving, logging turned off.  
 INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
-ONLY_INFERENCE : False
+ONLY_INFERENCE : True
 ONLY_VAL : False
 
 captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
@@ -19,7 +19,6 @@ contrastive : False
 reinforce : True
 mllm : "clipcap"
 
-
 #lora
 lora : True
 finetune_model : clip # {gpt, clip} # automatically freeze gpt.transformer or CLIP
@@ -35,11 +34,17 @@ freeze_adapter : False
 log_spice : False
 
 neg_mining:
-  curricullum : {"rand" : 20} #,  "medium" : 5, "hard" : 10} # indexed from 1
+  curricullum : {100 : ["rand",5]}
+  save_optimizer : False
   bag_size : 5
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
   val_level : "rand"
+
+resume_training : 
+  do : False
+  dir : sr_easy_bsz5
+  load_epoch  : 2 
 
 opts: 
   baseline : mean
@@ -55,17 +60,17 @@ opts:
   recv_clip_model : ViT-B/32 #ViT-L/14@336px
 
 WANDB:
-  logging : True
+  logging : False
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  clip_ft_lr9e8_mlpr32 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name :  clip_ft_lr1e7 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
-  batch_size : 128
+  batch_size : 64
   output_dir : /home/manugaur/EGG/inference_preds/
 
 #DEBUG, ONLY_INFERENCE,  INIT_VAL, logging, save_using_neg
