Image CODE pipeline setup

--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_imgcode.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_imgcode.yml
@@ -4,7 +4,7 @@ GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : True
 ONLY_VAL : False
-
+dataset : imagecode
 captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
 train_method : "discriminative" # (discriminative, cider, mle)
 prefix_len : 10
@@ -49,7 +49,7 @@ resume_training :
 opts: 
   baseline : mean
   n_epochs : 20
-  batch_size : 100
+  batch_size : 16
   lr : 9e-8 #2e-5
   max_len : 50
   checkpoint_freq : 1
